welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: type mismatch;
 found   : Int(7)
 required: String
			return 7;
                               ^alarmClock:6: error: type mismatch;
 found   : Int(10)
 required: String
			return 10;
                               ^alarmClock:10: error: type mismatch;
 found   : Int(10)
 required: String
			return 10;
                               ^alarmClock:12: error: not found: value off
			return off;
                               ^