welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if (day<6 && day>0) {
		if (!vacation) {
			return 7;
		}else{
			return 10;
		}
	}else{
		if (!vacation) {
			return 10;
		}else{
			return off;
		}
	}
}
